content resource swagger def
