# server/docs/swagger.yaml
@@ -38,17 +38,59 @@ info:
   title: Fiber Example API
   version: "1.0"
 paths:
-  /content:
+  /v1/content:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Delete content
+      tags:
+      - content
+    get:
+      consumes:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/content.Content'
+            type: array
+      summary: Get all content
+      tags:
+      - content
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/content.Content'
+      responses:
+        "201":
+          description: Created
+          schema:
+            type: string
+      summary: Create content
+      tags:
+      - content
     put:
       consumes:
       - application/json
-      description: update content
       parameters:
-      - description: name search by q
-        format: email
-        in: query
-        name: q
-        type: string
       - description: query params
         in: body
         name: request
